# aichallenge-2024

aichallenge/: log_evaluation.bash  run_evaluation.bash
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/config/: converter.param.yaml  vehicle_velocity_converter.param.yaml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/launch/: reference.launch.xml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/map/: change_map_def.bash  change_map_oii.bash  change_map_oio.bash  lanelet2_map.osm
aichallenge/workspace/src/aichallenge_submit/dwa/csv_files/: center_lane_line.csv  center_line.csv  left_lane_bound.csv  (+5 more)
aichallenge/workspace/src/aichallenge_submit/dwa/simple_dwa/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/dwa/simple_dwa/config/: config.yaml
aichallenge/workspace/src/aichallenge_submit/dwa/simple_dwa/include/: controller.hpp  course.hpp  dwa.hpp  dwa_node.hpp  obstacle.hpp  path.hpp  robot.hpp  simulator.hpp  types.hpp  utils.hpp
aichallenge/workspace/src/aichallenge_submit/dwa/simple_dwa/launch/: simple_dwa.launch.py
aichallenge/workspace/src/aichallenge_submit/dwa/simple_dwa/rviz/: dwa.rviz
aichallenge/workspace/src/aichallenge_submit/dwa/simple_dwa/src/: controller.cpp  course.cpp  dwa.cpp  dwa_node.cpp  main.cpp  obstacle.cpp  path.cpp  robot.cpp  simple_dwa.cpp  simulator.cpp  utils.cpp
aichallenge/workspace/src/aichallenge_submit/path_to_trajectory/: set_route_client.py
aichallenge/workspace/src/aichallenge_submit/simple_pure_pursuit/: package.xml
(+31 files in other folders)
